<resources>
    <string name="app_name">카스미노트</string>
    <string name="app_full_name">카스미노트</string>
    <string name="title_today">투데이</string>
    <string name="title_my_page">마이페이지</string>
    <string name="title_chara_list">캐릭터</string>
    <string name="title_equipment">장비</string>
    <string name="title_equipment_all">모든 장비</string>
    <string name="title_quest">퀘스트</string>
    <string name="title_clan_battle">클랜전</string>
    <string name="title_calendar">일정</string>
    <string name="title_information">정보</string>
    <string name="title_menu">메뉴</string>
    <string name="title_setting">설정</string>
    <string name="title_minion">소환수</string>
    <string name="title_dungeon">던전</string>
    <string name="title_log">로그</string>
    <string name="title_enemy">몬스터</string>
    <string name="title_sekai">월드이벤트</string>
    <string name="title_special_event">특별 이벤트</string>
    <string name="title_rank_comparison">랭크/장비 비교</string>
    <string name="title_rank_comparison_by_chara">비교 대상 캐릭터</string>
    <string name="title_gacha_list">픽업 목록</string>
    <string name="title_gacha_details">픽업 세부 사항</string>
    <string name="title_hatsune">이벤트</string>
    <string name="title_hatsune_stage">이벤트 목록</string>
    <string name="title_hatsune_wave">이벤트</string>
    <string name="title_tower">루나의 탑</string>
    <string name="title_gacha">가챠 목록</string>
    <string name="title_extension">확장 데이터</string>
    <string name="title_custom_db">커스텀 DB 설정</string>
    <string name="title_export_import_settings">사용자 데이터 설정</string>
    <string name="title_simple_layout">기본 레이아웃</string>
    <string name="title_my_chara_register">내 캐릭터 등록</string>
    <string name="title_my_chara_setting">내 캐릭터 설정</string>
    <string name="title_my_chara_target_setting">성장 목표 설정</string>
    <string name="title_my_chara_target">내 캐릭터 성장 목표</string>
    <string name="title_equipment_calculator">필요 장비 계산</string>
    <string name="title_analyze">캐릭터 분석</string>
    <string name="title_my_chara">내 캐릭터</string>
    <string name="title_srt_panel">끝말잇기 사전</string>
    <string name="title_skill_search">캐릭터 스킬 사전</string>
    <string name="setting_language" translatable="false">Language</string>
    <string name="setting_language_dialog_title">Language</string>
    <string name="setting_skill_expression_title">스킬 계산식</string>
    <string name="setting_skill_expression_summary">스킬 액션의 계산식을 표시</string>
    <string name="setting_prefab_time_title">액션 시간 표시</string>
    <string name="setting_prefab_time_summary">스킬 액션의 시간을 표시</string>
    <string name="setting_prefab_time_update_title">액션 시간 업데이트</string>
    <string name="setting_prefab_time_update_summary">해제시 액션정보 업데이트를 미뤄둘 수 있습니다</string>
    <string name="setting_exceed_max_levels_title">레벨 제한 해제 (베타)</string>
    <string name="setting_exceed_max_levels_summary">전용장비 등의 레벨 최대치를 증가\n(계산을 위해 재시작 필요)</string>
    <string name="setting_font_size">폰트 크기 조절</string>
    <string name="setting_font_size_summary">폰트 크기 조절을 랭크 장비 비교에만 시범적으로 적용</string>
    <string-array name="setting_language_options">
        <item>日本語</item>
        <item>简体中文</item>
        <item>한국어</item>
        <item>English</item>
    </string-array>
    <string-array name="setting_language_values">
        <item>ja</item>
        <item>zh</item>
        <item>kr</item>
        <item>en</item>
    </string-array>
    <string-array name="setting_server_options">
        <item>한국서버</item>
        <item>일본서버</item>
        <item>커스텀 DB</item>
    </string-array>
    <string-array name="setting_server_values">
        <item>kr</item>
        <item>jp</item>
        <item>custom</item>
    </string-array>
    <string-array name="setting_skill_expression_options">
        <item>수치</item>
        <item>계산식</item>
        <item>계수표기계산식</item>
    </string-array>
    <string-array name="setting_skill_expression_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="setting_font_size_options">
        <item>큰 글씨</item>
        <item>중간 크기 글씨</item>
        <item>작은 글씨</item>
        <item>아주 작은 글씨</item>
    </string-array>
    <string-array name="setting_font_size_values">
        <item>L</item>
        <item>M</item>
        <item>S</item>
        <item>XS</item>
    </string-array>
    <string name="setting_appearance">표시</string>
    <string name="setting_data">데이터</string>
    <string name="setting_system">시스템</string>
    <string name="setting_server">서버</string>
    <string name="setting_server_dialog_title">서버 정보 전환</string>
    <string name="setting_custom_db">커스텀 DB 설정</string>
    <string name="setting_custom_db_summary">커스텀 DB 파일을 가져오거나 간단한 메모를 설정합니다</string>
    <string name="setting_custom_db_buttons">커스텀 DB로 복사</string>
    <string name="setting_custom_db_details">커스텀 DB 설명 및 활용 예시</string>
    <string name="setting_custom_db_details_text">커스텀 DB는 현재 있는 DB를 복사하여 특정 시점의 기록을 저장하기 위해 사용합니다.\n\n활용예시) 현재 일섭 DB를 저장하여 올해 바뀌기 전의 보스 정보와 한섭 정보를 비교.\n활용예시2) 미래시에 필요한 장비 개수를 저장하기 위해 특정 시점의 DB를 기록.</string>
    <string name="setting_custom_db_change_name">커스텀 DB 메모 설정</string>
    <string name="setting_custom_db_memo">메모하기…</string>
    <string name="custom_db_copy">커스텀 DB로 복사</string>
    <string name="custom_db_jp">일본서버 DB</string>
    <string name="custom_db_kr">한국서버 DB</string>
    <string name="custom_db_copy_text">%s를 커스텀 DB로 복사하시겠습니까?</string>
    <string name="custom_db_copy_success">커스텀 DB로 복사했습니다. 서버 선택에서 커스텀 DB를 선택하거나 앱 완전 종료 후 재시작시 적용됩니다.</string>
    <string name="custom_db_copy_failed">커스텀 DB로 복사에 실패했습니다. 재시작해도 같은 증상이 나타난다면 자세한 사항은 로그를 참조하여 제보해주세요.</string>
    <string name="custom_db_copy_success_external">외부파일 %s을(를) 커스텀 DB로 복사했습니다. 서버 선택에서 커스텀 DB를 선택하거나 앱 완전 종료 후 재시작시 적용됩니다.</string>
    <string name="custom_db_copy_failed_external">외부파일 %s을(를) 커스텀 DB로 복사에 실패했습니다. 재시작해도 같은 증상이 나타난다면 자세한 사항은 로그를 참조하여 제보해주세요.</string>
    <string name="custom_db_copy_invalid">올바르지 않은 Sqlite3 파일입니다. 다시 확인해주세요.</string>
    <string name="custom_db_memo_save">메모로 저장되었습니다.</string>
    <string name="setting_contents_display">컨텐츠 표시</string>
    <string name="setting_contents_max_from_server">현재 시점의 컨텐츠만 보기</string>
    <string name="setting_contents_max_from_server_summary">한국 서버에서만 제대로 동작함</string>
    <string name="setting_contents_selection">컨텐츠 시점 선택</string>
    <string name="setting_contents_now">현재</string>
    <string name="setting_area_string">%1$d 지역 (%2$d월)</string>
    <string name="setting_selected_contents">%1$d 지역 - Lv.%2$d %3$d랭크 %4$d템</string>
    <string name="setting_contents_max_level">현재 시점 레벨</string>
    <string name="setting_contents_max_rank">현재 시점 랭크</string>
    <string name="setting_contents_max_equipments">현재 장비 수준</string>
    <string name="setting_add_passive_ability">패시브로 강화되는 수치를 더하기</string>
    <string name="setting_add_passive_ability_summary">EX스킬 수치가 더해집니다\n일부 기능은 재시작시 적용</string>
    <string name="setting_use_external_url">외부 URL 입력</string>
    <string name="setting_use_external_url_summary">외부 URL에서 필요한 데이터를 가져오기</string>
    <string name="setting_external_data">확장 데이터 목록</string>
    <string name="setting_external_data_summary">외부 데이터로 확장한 데이터 목록</string>
    <string name="setting_export_and_import_user_data">사용자 데이터 내보내기/가져오기</string>
    <string name="setting_export_and_import_user_data_summary">캐릭터 설정 등을 내보내거나 가져옵니다</string>
    <string name="setting_export_user_data_text">사용자 데이터 내보내기</string>
    <string name="setting_export_user_data_summary">사용자 데이터를 내보냅니다.</string>
    <string name="setting_export_user_data_description">아래의 내보내기 버튼을 눌러 사용자 데이터를 텍스트 형태로 내보냅니다.</string>
    <string name="setting_import_user_data_text">사용자 데이터 가져오기</string>
    <string name="setting_import_user_data_kr_jp">한국서버 → 일본서버</string>
    <string name="setting_import_user_data_kr_custom">한국서버 → 커스텀 DB</string>
    <string name="setting_import_user_data_jp_kr">일본서버 → 한국서버</string>
    <string name="setting_import_user_data_jp_custom">일본서버 → 커스텀 DB</string>
    <string name="setting_import_user_data_custom_kr">커스텀 DB → 한국서버</string>
    <string name="setting_import_user_data_custom_jp">커스텀 DB → 일본서버</string>
    <string name="setting_import_user_data_summary">사용자 데이터를 가져옵니다. 가져오는데 약간의 시간이 걸릴 수 있습니다.</string>
    <string name="setting_import_user_data_description">아래의 창에 사용자 데이터를 붙여넣어 데이터를 가져옵니다.</string>
    <string name="setting_export_import_details">카카오톡 나와의 채팅 등을 이용하여 가져오면 편리합니다.\n\n가져오는 방법 (아래의 둘 중 하나를 사용)\n1) 카카오톡 채팅에 기록된 데이터를 공유하기 버튼을 눌러 카스미노트를 선택하면 가져올 수 있습니다.\n2) 텍스트를 복사하여 위의 칸에 붙여넣고 가져오기를 클릭하면 사용자 설정을 가져올 수 있습니다.\n가져오기를 마친 후, 해당 내용은 완전히 종료한 뒤 재시작 시 적용됩니다.</string>
    <string name="setting_copy_user_data_text">사용자 데이터 DB간 복사하기</string>
    <string name="setting_delete_user_data">사용자 데이터 삭제</string>
    <string name="setting_delete_user_data_summary">컨텐츠 표시 및 외부 데이터가 재설정됩니다</string>
    <string name="setting_delete_user_data_text">사용자 데이터를 삭제하시겠습니까?\n컨텐츠 표시 정보가 초기화됩니다.</string>
    <string name="setting_db_version">데이터베이스 버젼</string>
    <string name="setting_app_version">앱 버젼</string>
    <string name="setting_re_download_db">데이터베이스를 재다운로드</string>
    <string name="setting_re_download_db_summary">일반적인 상황에서는 이 기능을 사용하실 필요가 없습니다</string>
    <string name="setting_beta_test">베타 테스트 앱 사용하기</string>
    <string name="setting_beta_test_summary">가끔 오류가 생길 수도 있는 베타 기능 업데이트를 사용합니다</string>
    <string name="setting_beta_test_alert">충분한 테스트를 거친 버전 외의 앱이 등록되어도 업데이트를 알립니다.\n치명적인 에러의 경우에는 삭제 후 재설치해야할 수 있습니다.</string>
    <string name="setting_detailed_mode">인게임 DB 정보 보기</string>
    <string name="setting_detailed_mode_summary">인게임 DB에서만 보이는 ID 등의 정보를 표기합니다.</string>
    <string name="setting_detailed_mode_alert">내부적으로만 사용되는 정보가 다수 있어서 쓸모없는 정보가 대다수이기 때문에, 게임 자체를 자세히 뜯어볼 필요가 있는 사람들만 사용하기를 권장드립니다.</string>
    <string name="setting_about">카스미노트 정보</string>
    <string name="double_back_to_exit">\'뒤로\' 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="about_concept">&quot;조수군을 위해 정보를 찾아왔어&quot;</string>
    <string name="about_version" translatable="false">Version: %s</string>
    <string name="about_disclaimer" translatable="false">This is an unofficial fan-made application, copyright of all resources associate with the game \"Princess Connect Re:Dive\" are belong to Cygames, Inc. </string>
    <string name="about_hp" translatable="false">Open source home page \nhttps://github.com/HerDataSam/KasumiNotes</string>
    <string name="text_combat_power">&#160;총 전투력&#160;</string>
    <string name="text_chara_story_rank">&#160;인연 랭크&#160;</string>
    <string name="text_physical_atk">&#160;물리 공격력&#160;</string>
    <string name="text_magical_atk">&#160;마법 공격력&#160;</string>
    <string name="text_physical_crt">&#160;물리 크리티컬&#160;</string>
    <string name="text_magical_crt">&#160;마법 크리티컬&#160;</string>
    <string name="text_physical_def">&#160;물리 방어력&#160;</string>
    <string name="text_magical_def">&#160;마법 방어력&#160;</string>
    <string name="text_hp">&#160;HP&#160;</string>
    <string name="text_life_steal">&#160;HP흡수&#160;</string>
    <string name="text_energy_recovery">&#160;TP상승&#160;</string>
    <string name="text_energy_reduce">&#160;TP소비경감&#160;</string>
    <string name="text_accuracy">&#160;명중&#160;</string>
    <string name="text_dodge">&#160;회피&#160;</string>
    <string name="text_wave_hp_recovery">&#160;HP자동회복&#160;</string>
    <string name="text_wave_energy_recovery">&#160;TP자동회복&#160;</string>
    <string name="text_physical_penetrate">&#160;물리관통&#160;</string>
    <string name="text_magical_penetrate">&#160;마법관통&#160;</string>
    <string name="text_hp_recovery">&#160;회복량 상승&#160;</string>
    <string name="text_srt_show_reading">단어 표시</string>
    <string name="text_srt_sort_abc">가나다 순</string>
    <string name="icon_srt_display">정렬 방법</string>
    <string name="icon_help">도움말</string>
    <string name="comparison_details_tp_text">TP 관련 수치 비교</string>
    <string name="comparison_details_def_text">방어 관련 수치 비교</string>
    <string name="comparison_details_dmg_text">공격/회피 수치 비교</string>
</resources>