<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:theme="@style/AppTheme"
        app:key="appearance_category"
        app:title="@string/setting_appearance">

        <ListPreference
            app:key="language"
            app:title="@string/setting_language"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/mic_language"
            app:entries="@array/setting_language_options"
            app:entryValues="@array/setting_language_values"
            app:dialogTitle="@string/setting_language_dialog_title" />

        <SwitchPreferenceCompat
            app:key="expressionStyle"
            app:defaultValue="false"
            app:icon="@drawable/mic_symbols"
            app:summary="@string/setting_kill_expression_summary"
            app:title="@string/setting_kill_expression_title" />

        <ListPreference
            app:key="textSize"
            app:title="@string/setting_font_size"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/mic_format_size"
            app:entries="@array/setting_font_size_options"
            app:entryValues="@array/setting_font_size_values"
            app:dialogTitle="@string/setting_font_size_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:theme="@style/AppTheme"
        app:key="contents_display_category"
        app:title="@string/setting_contents_display">

        <ListPreference
            app:key="contentsSelection"
            app:title="@string/setting_contents_selection"
            app:icon="@drawable/mic_lock_open"
            />

        <SwitchPreferenceCompat
            app:key="addPassiveAbility"
            app:title="@string/setting_add_passive_ability"
            app:summary="@string/setting_add_passive_ability_summary"
            app:icon="@drawable/mic_add_circle_outline"
            app:defaultValue="true"/>

        <EditTextPreference
            app:key="externalUrlOrData"
            app:title="@string/setting_use_external_url"
            app:summary="@string/setting_use_external_url_summary"
            app:icon="@drawable/mic_external_source"
            />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="system_category"
        app:title="@string/setting_system">

        <ListPreference
            app:key="server"
            app:title="@string/setting_server"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/mic_cloud"
            app:entries="@array/setting_server_options"
            app:entryValues="@array/setting_server_values"
            app:dialogTitle="@string/setting_server_dialog_title"
            app:defaultValue="kr"/>

        <Preference
            app:key="log"
            app:icon="@drawable/mic_file"
            app:title="@string/title_log" >
        </Preference>

        <!--
        <Preference
            app:key="reDownloadDb"
            app:icon="@drawable/mic_restore"
            app:title="@string/setting_re_download_db"
            app:summary="@string/setting_re_download_db_summary"/>
        -->
        <Preference
            app:key="deleteUserData"
            app:title="@string/setting_delete_user_data"
            app:summary="@string/setting_delete_user_data_summary"
            app:icon="@drawable/mic_delete_sweep"/>

        <Preference
            app:key="dbVersion_new"
            app:icon="@drawable/mic_chart"
            app:title="@string/setting_db_version"
            app:summary="0"/>

        <Preference
            app:key="appVersion"
            app:icon="@drawable/mic_appversion"
            app:title="@string/setting_app_version"
            app:summary="0"/>

        <SwitchPreference
            app:key="betaTest"
            app:icon="@drawable/mic_whatshot"
            app:title="@string/setting_beta_test"
            app:summary="@string/setting_beta_test_summary"
            />

        <Preference
            app:key="about"
            app:title="@string/setting_about" >
        </Preference>


    </PreferenceCategory>



</PreferenceScreen>