<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_today"
        android:icon="@drawable/mic_home"
        android:title="@string/title_my_page" />

    <item
        android:id="@+id/nav_chara_list"
        android:icon="@drawable/mic_chara"
        android:title="@string/title_chara_list" />

    <item
        android:id="@+id/nav_drop"
        android:icon="@drawable/mic_sword"
        android:title="@string/title_equipment" />

    <item
        android:id="@+id/nav_information"
        android:icon="@drawable/mic_information"
        android:title="@string/title_information" />

    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/mic_menu"
        android:title="@string/title_menu" />

</menu>
